--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
  <!-- bootstrap js -->
  <script src="js/bootstrap.bundle.min.js"></script>
  <!-- script js -->
- <script src="js/app.js"></script>
+ <script src="js/script.js"></script>
 </body>
 
 </html>
